cabal-version:      2.4
name:               xmonad-config
version:            0.1.0.0

extra-source-files: CHANGELOG.md

executable xmonad
    main-is:          xmonad.hs
    other-modules:    IfMaxAlt
    build-depends:    base ^>=4.15.1.0
                    , xmonad
                    ,	xmonad-contrib ^>= 0.17
                    , containers
    hs-source-dirs:   . 
                    , lib
    default-language: Haskell2010
